Compiler/y.output
   0  $accept : PROGRAM $end

   1  PROGRAM : LIST
   2          | GLOBAL_DEC LIST

   3  $$1 :

   4  GLOBAL_DEC : $$1 DECLARATION SCOL

   5  LIST : LIST FUNCTION
   6       | LIST CLASSDEF
   7       | LIST STRUCTDEF
   8       | LIST FUNCTION
   9       |

  10  $$2 :

  11  FUNCTION : FUNCTION_PREFIX LF $$2 STMTLIST RF

  12  $$3 :

  13  FUNCTION_PREFIX : FUNCTION_TYPE ID $$3 LP PARAMLIST RP

  14  FUNCTION_TYPE : VOID
  15                | INT
  16                | CHAR
  17                | FLOAT
  18                | STRING
  19                | INT MUL
  20                | CHAR MUL
  21                | ID MUL
  22                | VOID MUL

  23  DATA_TYPE : INT
  24            | CHAR
  25            | FLOAT
  26            | STRING
  27            | INT MUL
  28            | CHAR MUL
  29            | ID MUL
  30            | VOID MUL

  31  $$4 :

  32  PARAMLIST : PARAM $$4 COMMA PARAMLIST
  33            | PARAM
  34            |

  35  PARAM : DATA_TYPE ID

  36  STMTLIST : STMT STMTLIST
  37           |

  38  $$5 :

  39  CLASSDEF : CLASS ID LF $$5 CLASSBODY RF

  40  CLASSBODY : CLASSMEMBER CLASSBODY
  41            |

  42  CLASSMEMBER : ACCESS_MODIFIER DECLARATION SCOL
  43              | ACCESS_MODIFIER FUNCTION

  44  ACCESS_MODIFIER : PUBLIC
  45                  | PRIVATE
  46                  | PROTECTED

  47  STRUCTDEF : STRUCT ID LF STRUCTVAR RF SCOL

  48  STRUCTVAR : DECLARATION SCOL STRUCTVAR
  49            | STRUCT ID ID SCOL STRUCTVAR
  50            |

  51  STMT : DECLARATION SCOL
  52       | ASSIGNMENT SCOL
  53       | EXPR SCOL
  54       | RETURN_STMT SCOL
  55       | IF_STMT
  56       | WHILE_STMT
  57       | FOR_STMT
  58       | BREAK SCOL
  59       | CONTINUE SCOL
  60       | INPUT LP ID RP SCOL
  61       | INPUT LP ID LB EXPR RB RP SCOL
  62       | OUTPUT LP EXPR RP SCOL
  63       | OUTPUT LP DQ STR DQ RP SCOL
  64       | OUTPUT LP SQ CHARACTER SQ RP SCOL

  65  DECLARATION : DATA_TYPE ID
  66              | DATA_TYPE ID ASSIGN EXPR
  67              | STRING ID ASSIGN STR
  68              | DATA_TYPE ID LB INT_NUM RB

  69  $$6 :

  70  DECLARATION : DATA_TYPE ID LB INT_NUM RB ASSIGN $$6 LF ARR_VALUES RF
  71              | ID ID ASSIGN NEW ID LP RP
  72              | ID ID

  73  $$7 :

  74  ARR_VALUES : CONST $$7 COMMA ARR_VALUES
  75             | CONST

  76  RETURN_STMT : RETURN EXPR
  77              | RETURN

  78  EXPR : EXPR ADD EXPR
  79       | EXPR SUB EXPR
  80       | EXPR MUL EXPR
  81       | EXPR DIV EXPR
  82       | EXPR EQ EXPR
  83       | EXPR NE EXPR
  84       | EXPR LT EXPR
  85       | EXPR GT EXPR
  86       | EXPR LE EXPR
  87       | EXPR GE EXPR
  88       | EXPR AND EXPR
  89       | EXPR OR EXPR
  90       | EXPR BITAND EXPR
  91       | EXPR BITOR EXPR
  92       | UNARY_EXPR
  93       | PRIMARY_EXPR
  94       | POSTFIX_EXPR

  95  POSTFIX_EXPR : FUNCTION_CALL
  96               | ID LB EXPR RB

  97  UNARY_EXPR : UNARY_OP PRIMARY_EXPR

  98  PRIMARY_EXPR : ID
  99               | CONST
 100               | LP EXPR RP
 101               | NULLP

 102  UNARY_OP : ADD
 103           | SUB
 104           | NEG

 105  CONST : INT_NUM
 106        | FLOAT_NUM
 107        | CHARACTER

 108  ASSIGNMENT : ID ASSIGN EXPR
 109             | ID LB EXPR RB ASSIGN EXPR

 110  $$8 :

 111  $$9 :

 112  $$10 :

 113  $$11 :

 114  IF_STMT : IF $$8 LP EXPR RP $$9 LF $$10 STMTLIST RF $$11 ELIF_STMT ELSE_STMT

 115  $$12 :

 116  $$13 :

 117  $$14 :

 118  $$15 :

 119  ELIF_STMT : ELSE IF $$12 LP EXPR RP $$13 LF $$14 STMTLIST RF $$15 ELIF_STMT
 120            |

 121  $$16 :

 122  ELSE_STMT : ELSE LF $$16 STMTLIST RF
 123            |

 124  $$17 :

 125  $$18 :

 126  $$19 :

 127  WHILE_STMT : WHILE $$17 LP EXPR RP $$18 LF $$19 STMTLIST RF

 128  $$20 :

 129  $$21 :

 130  $$22 :

 131  $$23 :

 132  FOR_STMT : FOR LP ASSIGNMENT SCOL $$20 EXPR SCOL $$21 ASSIGNMENT RP $$22 LF $$23 STMTLIST RF

 133  $$24 :

 134  FUNCTION_CALL : ID $$24 LP ARGUMENTLIST RP

 135  ARGUMENTLIST : ARG COMMA ARGUMENTLIST
 136               | ARG
 137               |

 138  ARG : EXPR

0: reduce/reduce conflict (reduce 3, reduce 9) on INT
0: reduce/reduce conflict (reduce 3, reduce 9) on CHAR
0: reduce/reduce conflict (reduce 3, reduce 9) on FLOAT
0: reduce/reduce conflict (reduce 3, reduce 9) on STRING
0: reduce/reduce conflict (reduce 3, reduce 9) on VOID
0: reduce/reduce conflict (reduce 3, reduce 9) on ID
state 0
	$accept : . PROGRAM $end  (0)
	$$1 : .  (3)
	LIST : .  (9)

	$end  reduce 9
	INT  reduce 3
	CHAR  reduce 3
	FLOAT  reduce 3
	STRING  reduce 3
	VOID  reduce 3
	CLASS  reduce 9
	STRUCT  reduce 9
	ID  reduce 3

	PROGRAM  goto 1
	LIST  goto 2
	GLOBAL_DEC  goto 3
	$$1  goto 4


state 1
	$accept : PROGRAM . $end  (0)

	$end  accept


state 2
	PROGRAM : LIST .  (1)
	LIST : LIST . FUNCTION  (5)
	LIST : LIST . CLASSDEF  (6)
	LIST : LIST . STRUCTDEF  (7)
	LIST : LIST . FUNCTION  (8)

	INT  shift 5
	CHAR  shift 6
	FLOAT  shift 7
	STRING  shift 8
	VOID  shift 9
	CLASS  shift 10
	STRUCT  shift 11
	ID  shift 12
	$end  reduce 1

	FUNCTION  goto 13
	FUNCTION_PREFIX  goto 14
	CLASSDEF  goto 15
	FUNCTION_TYPE  goto 16
	STRUCTDEF  goto 17


state 3
	PROGRAM : GLOBAL_DEC . LIST  (2)
	LIST : .  (9)

	.  reduce 9

	LIST  goto 18


state 4
	GLOBAL_DEC : $$1 . DECLARATION SCOL  (4)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	ID  shift 24
	.  error

	DATA_TYPE  goto 25
	DECLARATION  goto 26


state 5
	FUNCTION_TYPE : INT .  (15)
	FUNCTION_TYPE : INT . MUL  (19)

	MUL  shift 27
	ID  reduce 15


state 6
	FUNCTION_TYPE : CHAR .  (16)
	FUNCTION_TYPE : CHAR . MUL  (20)

	MUL  shift 28
	ID  reduce 16


state 7
	FUNCTION_TYPE : FLOAT .  (17)

	.  reduce 17


state 8
	FUNCTION_TYPE : STRING .  (18)

	.  reduce 18


state 9
	FUNCTION_TYPE : VOID .  (14)
	FUNCTION_TYPE : VOID . MUL  (22)

	MUL  shift 29
	ID  reduce 14


state 10
	CLASSDEF : CLASS . ID LF $$5 CLASSBODY RF  (39)

	ID  shift 30
	.  error


state 11
	STRUCTDEF : STRUCT . ID LF STRUCTVAR RF SCOL  (47)

	ID  shift 31
	.  error


state 12
	FUNCTION_TYPE : ID . MUL  (21)

	MUL  shift 32
	.  error


13: reduce/reduce conflict (reduce 5, reduce 8) on $end
13: reduce/reduce conflict (reduce 5, reduce 8) on INT
13: reduce/reduce conflict (reduce 5, reduce 8) on CHAR
13: reduce/reduce conflict (reduce 5, reduce 8) on FLOAT
13: reduce/reduce conflict (reduce 5, reduce 8) on STRING
13: reduce/reduce conflict (reduce 5, reduce 8) on VOID
13: reduce/reduce conflict (reduce 5, reduce 8) on CLASS
13: reduce/reduce conflict (reduce 5, reduce 8) on STRUCT
13: reduce/reduce conflict (reduce 5, reduce 8) on ID
state 13
	LIST : LIST FUNCTION .  (5)
	LIST : LIST FUNCTION .  (8)

	.  reduce 5


state 14
	FUNCTION : FUNCTION_PREFIX . LF $$2 STMTLIST RF  (11)

	LF  shift 33
	.  error


state 15
	LIST : LIST CLASSDEF .  (6)

	.  reduce 6


state 16
	FUNCTION_PREFIX : FUNCTION_TYPE . ID $$3 LP PARAMLIST RP  (13)

	ID  shift 34
	.  error


state 17
	LIST : LIST STRUCTDEF .  (7)

	.  reduce 7


state 18
	PROGRAM : GLOBAL_DEC LIST .  (2)
	LIST : LIST . FUNCTION  (5)
	LIST : LIST . CLASSDEF  (6)
	LIST : LIST . STRUCTDEF  (7)
	LIST : LIST . FUNCTION  (8)

	INT  shift 5
	CHAR  shift 6
	FLOAT  shift 7
	STRING  shift 8
	VOID  shift 9
	CLASS  shift 10
	STRUCT  shift 11
	ID  shift 12
	$end  reduce 2

	FUNCTION  goto 13
	FUNCTION_PREFIX  goto 14
	CLASSDEF  goto 15
	FUNCTION_TYPE  goto 16
	STRUCTDEF  goto 17


state 19
	DATA_TYPE : INT .  (23)
	DATA_TYPE : INT . MUL  (27)

	MUL  shift 35
	ID  reduce 23


state 20
	DATA_TYPE : CHAR .  (24)
	DATA_TYPE : CHAR . MUL  (28)

	MUL  shift 36
	ID  reduce 24


state 21
	DATA_TYPE : FLOAT .  (25)

	.  reduce 25


22: shift/reduce conflict (shift 37, reduce 26) on ID
state 22
	DATA_TYPE : STRING .  (26)
	DECLARATION : STRING . ID ASSIGN STR  (67)

	ID  shift 37


state 23
	DATA_TYPE : VOID . MUL  (30)

	MUL  shift 38
	.  error


state 24
	DATA_TYPE : ID . MUL  (29)
	DECLARATION : ID . ID ASSIGN NEW ID LP RP  (71)
	DECLARATION : ID . ID  (72)

	ID  shift 39
	MUL  shift 40
	.  error


state 25
	DECLARATION : DATA_TYPE . ID  (65)
	DECLARATION : DATA_TYPE . ID ASSIGN EXPR  (66)
	DECLARATION : DATA_TYPE . ID LB INT_NUM RB  (68)
	DECLARATION : DATA_TYPE . ID LB INT_NUM RB ASSIGN $$6 LF ARR_VALUES RF  (70)

	ID  shift 41
	.  error


state 26
	GLOBAL_DEC : $$1 DECLARATION . SCOL  (4)

	SCOL  shift 42
	.  error


state 27
	FUNCTION_TYPE : INT MUL .  (19)

	.  reduce 19


state 28
	FUNCTION_TYPE : CHAR MUL .  (20)

	.  reduce 20


state 29
	FUNCTION_TYPE : VOID MUL .  (22)

	.  reduce 22


state 30
	CLASSDEF : CLASS ID . LF $$5 CLASSBODY RF  (39)

	LF  shift 43
	.  error


state 31
	STRUCTDEF : STRUCT ID . LF STRUCTVAR RF SCOL  (47)

	LF  shift 44
	.  error


state 32
	FUNCTION_TYPE : ID MUL .  (21)

	.  reduce 21


state 33
	FUNCTION : FUNCTION_PREFIX LF . $$2 STMTLIST RF  (11)
	$$2 : .  (10)

	.  reduce 10

	$$2  goto 45


state 34
	FUNCTION_PREFIX : FUNCTION_TYPE ID . $$3 LP PARAMLIST RP  (13)
	$$3 : .  (12)

	.  reduce 12

	$$3  goto 46


state 35
	DATA_TYPE : INT MUL .  (27)

	.  reduce 27


state 36
	DATA_TYPE : CHAR MUL .  (28)

	.  reduce 28


state 37
	DECLARATION : STRING ID . ASSIGN STR  (67)

	ASSIGN  shift 47
	.  error


state 38
	DATA_TYPE : VOID MUL .  (30)

	.  reduce 30


state 39
	DECLARATION : ID ID . ASSIGN NEW ID LP RP  (71)
	DECLARATION : ID ID .  (72)

	ASSIGN  shift 48
	SCOL  reduce 72


state 40
	DATA_TYPE : ID MUL .  (29)

	.  reduce 29


state 41
	DECLARATION : DATA_TYPE ID .  (65)
	DECLARATION : DATA_TYPE ID . ASSIGN EXPR  (66)
	DECLARATION : DATA_TYPE ID . LB INT_NUM RB  (68)
	DECLARATION : DATA_TYPE ID . LB INT_NUM RB ASSIGN $$6 LF ARR_VALUES RF  (70)

	ASSIGN  shift 49
	LB  shift 50
	SCOL  reduce 65


state 42
	GLOBAL_DEC : $$1 DECLARATION SCOL .  (4)

	.  reduce 4


state 43
	CLASSDEF : CLASS ID LF . $$5 CLASSBODY RF  (39)
	$$5 : .  (38)

	.  reduce 38

	$$5  goto 51


state 44
	STRUCTDEF : STRUCT ID LF . STRUCTVAR RF SCOL  (47)
	STRUCTVAR : .  (50)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	STRUCT  shift 52
	ID  shift 24
	RF  reduce 50

	DATA_TYPE  goto 25
	DECLARATION  goto 53
	STRUCTVAR  goto 54


state 45
	FUNCTION : FUNCTION_PREFIX LF $$2 . STMTLIST RF  (11)
	STMTLIST : .  (37)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	RETURN  shift 55
	INPUT  shift 56
	OUTPUT  shift 57
	IF  shift 58
	WHILE  shift 59
	FOR  shift 60
	BREAK  shift 61
	CONTINUE  shift 62
	INT_NUM  shift 63
	FLOAT_NUM  shift 64
	ID  shift 65
	ADD  shift 66
	SUB  shift 67
	LP  shift 68
	CHARACTER  shift 69
	NEG  shift 70
	NULLP  shift 71
	RF  reduce 37

	DATA_TYPE  goto 25
	STMTLIST  goto 72
	STMT  goto 73
	DECLARATION  goto 74
	ASSIGNMENT  goto 75
	EXPR  goto 76
	RETURN_STMT  goto 77
	UNARY_EXPR  goto 78
	PRIMARY_EXPR  goto 79
	UNARY_OP  goto 80
	CONST  goto 81
	IF_STMT  goto 82
	WHILE_STMT  goto 83
	FOR_STMT  goto 84
	FUNCTION_CALL  goto 85
	POSTFIX_EXPR  goto 86


state 46
	FUNCTION_PREFIX : FUNCTION_TYPE ID $$3 . LP PARAMLIST RP  (13)

	LP  shift 87
	.  error


state 47
	DECLARATION : STRING ID ASSIGN . STR  (67)

	STR  shift 88
	.  error


state 48
	DECLARATION : ID ID ASSIGN . NEW ID LP RP  (71)

	NEW  shift 89
	.  error


state 49
	DECLARATION : DATA_TYPE ID ASSIGN . EXPR  (66)

	INT_NUM  shift 63
	FLOAT_NUM  shift 64
	ID  shift 90
	ADD  shift 66
	SUB  shift 67
	LP  shift 68
	CHARACTER  shift 69
	NEG  shift 70
	NULLP  shift 71
	.  error

	EXPR  goto 91
	UNARY_EXPR  goto 78
	PRIMARY_EXPR  goto 79
	UNARY_OP  goto 80
	CONST  goto 81
	FUNCTION_CALL  goto 85
	POSTFIX_EXPR  goto 86


state 50
	DECLARATION : DATA_TYPE ID LB . INT_NUM RB  (68)
	DECLARATION : DATA_TYPE ID LB . INT_NUM RB ASSIGN $$6 LF ARR_VALUES RF  (70)

	INT_NUM  shift 92
	.  error


state 51
	CLASSDEF : CLASS ID LF $$5 . CLASSBODY RF  (39)
	CLASSBODY : .  (41)

	PUBLIC  shift 93
	PRIVATE  shift 94
	PROTECTED  shift 95
	RF  reduce 41

	CLASSBODY  goto 96
	CLASSMEMBER  goto 97
	ACCESS_MODIFIER  goto 98


state 52
	STRUCTVAR : STRUCT . ID ID SCOL STRUCTVAR  (49)

	ID  shift 99
	.  error


state 53
	STRUCTVAR : DECLARATION . SCOL STRUCTVAR  (48)

	SCOL  shift 100
	.  error


state 54
	STRUCTDEF : STRUCT ID LF STRUCTVAR . RF SCOL  (47)

	RF  shift 101
	.  error


state 55
	RETURN_STMT : RETURN . EXPR  (76)
	RETURN_STMT : RETURN .  (77)

	INT_NUM  shift 63
	FLOAT_NUM  shift 64
	ID  shift 90
	ADD  shift 66
	SUB  shift 67
	LP  shift 68
	CHARACTER  shift 69
	NEG  shift 70
	NULLP  shift 71
	SCOL  reduce 77

	EXPR  goto 102
	UNARY_EXPR  goto 78
	PRIMARY_EXPR  goto 79
	UNARY_OP  goto 80
	CONST  goto 81
	FUNCTION_CALL  goto 85
	POSTFIX_EXPR  goto 86


state 56
	STMT : INPUT . LP ID RP SCOL  (60)
	STMT : INPUT . LP ID LB EXPR RB RP SCOL  (61)

	LP  shift 103
	.  error


state 57
	STMT : OUTPUT . LP EXPR RP SCOL  (62)
	STMT : OUTPUT . LP DQ STR DQ RP SCOL  (63)
	STMT : OUTPUT . LP SQ CHARACTER SQ RP SCOL  (64)

	LP  shift 104
	.  error


state 58
	IF_STMT : IF . $$8 LP EXPR RP $$9 LF $$10 STMTLIST RF $$11 ELIF_STMT ELSE_STMT  (114)
	$$8 : .  (110)

	.  reduce 110

	$$8  goto 105


state 59
	WHILE_STMT : WHILE . $$17 LP EXPR RP $$18 LF $$19 STMTLIST RF  (127)
	$$17 : .  (124)

	.  reduce 124

	$$17  goto 106


state 60
	FOR_STMT : FOR . LP ASSIGNMENT SCOL $$20 EXPR SCOL $$21 ASSIGNMENT RP $$22 LF $$23 STMTLIST RF  (132)

	LP  shift 107
	.  error


state 61
	STMT : BREAK . SCOL  (58)

	SCOL  shift 108
	.  error


state 62
	STMT : CONTINUE . SCOL  (59)

	SCOL  shift 109
	.  error


state 63
	CONST : INT_NUM .  (105)

	.  reduce 105


state 64
	CONST : FLOAT_NUM .  (106)

	.  reduce 106


65: shift/reduce conflict (shift 40, reduce 98) on MUL
state 65
	DATA_TYPE : ID . MUL  (29)
	DECLARATION : ID . ID ASSIGN NEW ID LP RP  (71)
	DECLARATION : ID . ID  (72)
	POSTFIX_EXPR : ID . LB EXPR RB  (96)
	PRIMARY_EXPR : ID .  (98)
	ASSIGNMENT : ID . ASSIGN EXPR  (108)
	ASSIGNMENT : ID . LB EXPR RB ASSIGN EXPR  (109)
	FUNCTION_CALL : ID . $$24 LP ARGUMENTLIST RP  (134)
	$$24 : .  (133)

	ID  shift 39
	MUL  shift 40
	ASSIGN  shift 110
	LB  shift 111
	ADD  reduce 98
	SUB  reduce 98
	DIV  reduce 98
	EQ  reduce 98
	NE  reduce 98
	LT  reduce 98
	GT  reduce 98
	LE  reduce 98
	GE  reduce 98
	AND  reduce 98
	OR  reduce 98
	SCOL  reduce 98
	LP  reduce 133
	BITAND  reduce 98
	BITOR  reduce 98

	$$24  goto 112


state 66
	UNARY_OP : ADD .  (102)

	.  reduce 102


state 67
	UNARY_OP : SUB .  (103)

	.  reduce 103


state 68
	PRIMARY_EXPR : LP . EXPR RP  (100)

	INT_NUM  shift 63
	FLOAT_NUM  shift 64
	ID  shift 90
	ADD  shift 66
	SUB  shift 67
	LP  shift 68
	CHARACTER  shift 69
	NEG  shift 70
	NULLP  shift 71
	.  error

	EXPR  goto 113
	UNARY_EXPR  goto 78
	PRIMARY_EXPR  goto 79
	UNARY_OP  goto 80
	CONST  goto 81
	FUNCTION_CALL  goto 85
	POSTFIX_EXPR  goto 86


state 69
	CONST : CHARACTER .  (107)

	.  reduce 107


state 70
	UNARY_OP : NEG .  (104)

	.  reduce 104


state 71
	PRIMARY_EXPR : NULLP .  (101)

	.  reduce 101


state 72
	FUNCTION : FUNCTION_PREFIX LF $$2 STMTLIST . RF  (11)

	RF  shift 114
	.  error


state 73
	STMTLIST : STMT . STMTLIST  (36)
	STMTLIST : .  (37)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	RETURN  shift 55
	INPUT  shift 56
	OUTPUT  shift 57
	IF  shift 58
	WHILE  shift 59
	FOR  shift 60
	BREAK  shift 61
	CONTINUE  shift 62
	INT_NUM  shift 63
	FLOAT_NUM  shift 64
	ID  shift 65
	ADD  shift 66
	SUB  shift 67
	LP  shift 68
	CHARACTER  shift 69
	NEG  shift 70
	NULLP  shift 71
	RF  reduce 37

	DATA_TYPE  goto 25
	STMTLIST  goto 115
	STMT  goto 73
	DECLARATION  goto 74
	ASSIGNMENT  goto 75
	EXPR  goto 76
	RETURN_STMT  goto 77
	UNARY_EXPR  goto 78
	PRIMARY_EXPR  goto 79
	UNARY_OP  goto 80
	CONST  goto 81
	IF_STMT  goto 82
	WHILE_STMT  goto 83
	FOR_STMT  goto 84
	FUNCTION_CALL  goto 85
	POSTFIX_EXPR  goto 86


state 74
	STMT : DECLARATION . SCOL  (51)

	SCOL  shift 116
	.  error


state 75
	STMT : ASSIGNMENT . SCOL  (52)

	SCOL  shift 117
	.  error


state 76
	STMT : EXPR . SCOL  (53)
	EXPR : EXPR . ADD EXPR  (78)
	EXPR : EXPR . SUB EXPR  (79)
	EXPR : EXPR . MUL EXPR  (80)
	EXPR : EXPR . DIV EXPR  (81)
	EXPR : EXPR . EQ EXPR  (82)
	EXPR : EXPR . NE EXPR  (83)
	EXPR : EXPR . LT EXPR  (84)
	EXPR : EXPR . GT EXPR  (85)
	EXPR : EXPR . LE EXPR  (86)
	EXPR : EXPR . GE EXPR  (87)
	EXPR : EXPR . AND EXPR  (88)
	EXPR : EXPR . OR EXPR  (89)
	EXPR : EXPR . BITAND EXPR  (90)
	EXPR : EXPR . BITOR EXPR  (91)

	ADD  shift 118
	SUB  shift 119
	MUL  shift 120
	DIV  shift 121
	EQ  shift 122
	NE  shift 123
	LT  shift 124
	GT  shift 125
	LE  shift 126
	GE  shift 127
	AND  shift 128
	OR  shift 129
	SCOL  shift 130
	BITAND  shift 131
	BITOR  shift 132
	.  error


state 77
	STMT : RETURN_STMT . SCOL  (54)

	SCOL  shift 133
	.  error


state 78
	EXPR : UNARY_EXPR .  (92)

	.  reduce 92


state 79
	EXPR : PRIMARY_EXPR .  (93)

	.  reduce 93


state 80
	UNARY_EXPR : UNARY_OP . PRIMARY_EXPR  (97)

	INT_NUM  shift 63
	FLOAT_NUM  shift 64
	ID  shift 134
	LP  shift 68
	CHARACTER  shift 69
	NULLP  shift 71
	.  error

	PRIMARY_EXPR  goto 135
	CONST  goto 81


state 81
	PRIMARY_EXPR : CONST .  (99)

	.  reduce 99


state 82
	STMT : IF_STMT .  (55)

	.  reduce 55


state 83
	STMT : WHILE_STMT .  (56)

	.  reduce 56


state 84
	STMT : FOR_STMT .  (57)

	.  reduce 57


state 85
	POSTFIX_EXPR : FUNCTION_CALL .  (95)

	.  reduce 95


state 86
	EXPR : POSTFIX_EXPR .  (94)

	.  reduce 94


state 87
	FUNCTION_PREFIX : FUNCTION_TYPE ID $$3 LP . PARAMLIST RP  (13)
	PARAMLIST : .  (34)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 136
	VOID  shift 23
	ID  shift 137
	RP  reduce 34

	DATA_TYPE  goto 138
	PARAMLIST  goto 139
	PARAM  goto 140


state 88
	DECLARATION : STRING ID ASSIGN STR .  (67)

	.  reduce 67


state 89
	DECLARATION : ID ID ASSIGN NEW . ID LP RP  (71)

	ID  shift 141
	.  error


state 90
	POSTFIX_EXPR : ID . LB EXPR RB  (96)
	PRIMARY_EXPR : ID .  (98)
	FUNCTION_CALL : ID . $$24 LP ARGUMENTLIST RP  (134)
	$$24 : .  (133)

	LB  shift 142
	ADD  reduce 98
	SUB  reduce 98
	MUL  reduce 98
	DIV  reduce 98
	EQ  reduce 98
	NE  reduce 98
	LT  reduce 98
	GT  reduce 98
	LE  reduce 98
	GE  reduce 98
	AND  reduce 98
	OR  reduce 98
	SCOL  reduce 98
	COMMA  reduce 98
	LP  reduce 133
	RP  reduce 98
	RB  reduce 98
	BITAND  reduce 98
	BITOR  reduce 98

	$$24  goto 112


state 91
	DECLARATION : DATA_TYPE ID ASSIGN EXPR .  (66)
	EXPR : EXPR . ADD EXPR  (78)
	EXPR : EXPR . SUB EXPR  (79)
	EXPR : EXPR . MUL EXPR  (80)
	EXPR : EXPR . DIV EXPR  (81)
	EXPR : EXPR . EQ EXPR  (82)
	EXPR : EXPR . NE EXPR  (83)
	EXPR : EXPR . LT EXPR  (84)
	EXPR : EXPR . GT EXPR  (85)
	EXPR : EXPR . LE EXPR  (86)
	EXPR : EXPR . GE EXPR  (87)
	EXPR : EXPR . AND EXPR  (88)
	EXPR : EXPR . OR EXPR  (89)
	EXPR : EXPR . BITAND EXPR  (90)
	EXPR : EXPR . BITOR EXPR  (91)

	ADD  shift 118
	SUB  shift 119
	MUL  shift 120
	DIV  shift 121
	EQ  shift 122
	NE  shift 123
	LT  shift 124
	GT  shift 125
	LE  shift 126
	GE  shift 127
	AND  shift 128
	OR  shift 129
	BITAND  shift 131
	BITOR  shift 132
	SCOL  reduce 66


state 92
	DECLARATION : DATA_TYPE ID LB INT_NUM . RB  (68)
	DECLARATION : DATA_TYPE ID LB INT_NUM . RB ASSIGN $$6 LF ARR_VALUES RF  (70)

	RB  shift 143
	.  error


state 93
	ACCESS_MODIFIER : PUBLIC .  (44)

	.  reduce 44


state 94
	ACCESS_MODIFIER : PRIVATE .  (45)

	.  reduce 45


state 95
	ACCESS_MODIFIER : PROTECTED .  (46)

	.  reduce 46


state 96
	CLASSDEF : CLASS ID LF $$5 CLASSBODY . RF  (39)

	RF  shift 144
	.  error


state 97
	CLASSBODY : CLASSMEMBER . CLASSBODY  (40)
	CLASSBODY : .  (41)

	PUBLIC  shift 93
	PRIVATE  shift 94
	PROTECTED  shift 95
	RF  reduce 41

	CLASSBODY  goto 145
	CLASSMEMBER  goto 97
	ACCESS_MODIFIER  goto 98


state 98
	CLASSMEMBER : ACCESS_MODIFIER . DECLARATION SCOL  (42)
	CLASSMEMBER : ACCESS_MODIFIER . FUNCTION  (43)

	INT  shift 146
	CHAR  shift 147
	FLOAT  shift 148
	STRING  shift 149
	VOID  shift 150
	ID  shift 151
	.  error

	FUNCTION  goto 152
	FUNCTION_PREFIX  goto 14
	DATA_TYPE  goto 25
	DECLARATION  goto 153
	FUNCTION_TYPE  goto 16


state 99
	STRUCTVAR : STRUCT ID . ID SCOL STRUCTVAR  (49)

	ID  shift 154
	.  error


state 100
	STRUCTVAR : DECLARATION SCOL . STRUCTVAR  (48)
	STRUCTVAR : .  (50)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	STRUCT  shift 52
	ID  shift 24
	RF  reduce 50

	DATA_TYPE  goto 25
	DECLARATION  goto 53
	STRUCTVAR  goto 155


state 101
	STRUCTDEF : STRUCT ID LF STRUCTVAR RF . SCOL  (47)

	SCOL  shift 156
	.  error


state 102
	RETURN_STMT : RETURN EXPR .  (76)
	EXPR : EXPR . ADD EXPR  (78)
	EXPR : EXPR . SUB EXPR  (79)
	EXPR : EXPR . MUL EXPR  (80)
	EXPR : EXPR . DIV EXPR  (81)
	EXPR : EXPR . EQ EXPR  (82)
	EXPR : EXPR . NE EXPR  (83)
	EXPR : EXPR . LT EXPR  (84)
	EXPR : EXPR . GT EXPR  (85)
	EXPR : EXPR . LE EXPR  (86)
	EXPR : EXPR . GE EXPR  (87)
	EXPR : EXPR . AND EXPR  (88)
	EXPR : EXPR . OR EXPR  (89)
	EXPR : EXPR . BITAND EXPR  (90)
	EXPR : EXPR . BITOR EXPR  (91)

	ADD  shift 118
	SUB  shift 119
	MUL  shift 120
	DIV  shift 121
	EQ  shift 122
	NE  shift 123
	LT  shift 124
	GT  shift 125
	LE  shift 126
	GE  shift 127
	AND  shift 128
	OR  shift 129
	BITAND  shift 131
	BITOR  shift 132
	SCOL  reduce 76


state 103
	STMT : INPUT LP . ID RP SCOL  (60)
	STMT : INPUT LP . ID LB EXPR RB RP SCOL  (61)

	ID  shift 157
	.  error


state 104
	STMT : OUTPUT LP . EXPR RP SCOL  (62)
	STMT : OUTPUT LP . DQ STR DQ RP SCOL  (63)
	STMT : OUTPUT LP . SQ CHARACTER SQ RP SCOL  (64)

	INT_NUM  shift 63
	FLOAT_NUM  shift 64
	ID  shift 90
	ADD  shift 66
	SUB  shift 67
	LP  shift 68
	CHARACTER  shift 69
	NEG  shift 70
	DQ  shift 158
	SQ  shift 159
	NULLP  shift 71
	.  error

	EXPR  goto 160
	UNARY_EXPR  goto 78
	PRIMARY_EXPR  goto 79
	UNARY_OP  goto 80
	CONST  goto 81
	FUNCTION_CALL  goto 85
	POSTFIX_EXPR  goto 86


state 105
	IF_STMT : IF $$8 . LP EXPR RP $$9 LF $$10 STMTLIST RF $$11 ELIF_STMT ELSE_STMT  (114)

	LP  shift 161
	.  error


state 106
	WHILE_STMT : WHILE $$17 . LP EXPR RP $$18 LF $$19 STMTLIST RF  (127)

	LP  shift 162
	.  error


state 107
	FOR_STMT : FOR LP . ASSIGNMENT SCOL $$20 EXPR SCOL $$21 ASSIGNMENT RP $$22 LF $$23 STMTLIST RF  (132)

	ID  shift 163
	.  error

	ASSIGNMENT  goto 164


state 108
	STMT : BREAK SCOL .  (58)

	.  reduce 58


state 109
	STMT : CONTINUE SCOL .  (59)

	.  reduce 59


state 110
	ASSIGNMENT : ID ASSIGN . EXPR  (108)
